# SciForge-reproduction-

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  DESIGN.md  DESIGN.zh-CN.md  LICENSE  PROJECT.md  PROJECT_AGENT_TOOL_SAFETY.md  PROJECT_CHAT_IMAGE_DISPLAY.md  PROJECT_GIT_DISCOVERY.md  PROJECT_IM_STABILITY.md  PROJECT_PDF_WORKSPACE.md  PROJECT_RUNTIME_FOUNDATION.md  PROJECT_SDD_CLOSED_LOOP.md  PROJECT_VOICE_INPUT.md  PROJECT_WRITE_RICH_TEXT.md  PROJECT_latex.md  PROJECT_license.md  PROJECT_mcp.md  PROJECT_multiagent.md  README.en.md  README.md  REPORT.md  SECURITY.md  SECURITY.zh-CN.md  THIRD_PARTY_NOTICES.md  electron-builder.config.cjs  electron.vite.config.ts  eslint.config.js  exp_EXP-MR7H36MX.sh  exp_EXP-MR7H3HFL.sh  package-lock.json  package.json  research_agent_github_memory_design_zh.md  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vitest.config.ts  启动-sciforge-computer-use.ps1  启动-secrets.example.ps1
.agents/: experiments.json  hypotheses.json
docs/: AGENTS.md  (+35 more)
evidence-dag-engine/: .env.example  .gitignore  EVAL_METHODOLOGY.md  README.md  VALIDATION.md  pyproject.toml  requirements.txt
evidence-dag-engine/benchmark/: adversarial_soundness.py  soundness_benchmark.py
evidence-dag-engine/samples/: README.md
evidence-dag-engine/scripts/: live_extract.py
evidence-dag-engine/src/evidence_dag/: analysis.py  server.py  service.py  verifier.py
evidence-dag-engine/tests/: test_analysis.py  test_engine.py  test_harsh.py  test_reconcile.py
evidence-dag-engine/tests/fixtures/: lk99_trace.json
evidence-dag-engine/ui/: index.html
(+1333 files in other folders)
